<?xml version="1.0"?>
<package format="2">
  <name>genetic_node</name>
  <version>0.0.0</version>
  <description>The genetic package</description>

  <maintainer email="codestation@todo.todo">codestation</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>vectornav</depend>
  <depend>hammerhead_control</depend>
</package>
